# matrix-multiplication

mpi/: build.sh
mpi/ParallelMatrixMultiplication/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
mpi/ParallelMatrixMultiplication/src/: Input.cpp  Input.h  Master.cpp  Master.h  Matrix.cpp  Matrix.h  Multiplication.cpp  Multiplication.h  Node.h  Parallel.cpp  Parallel.h  Worker.cpp  Worker.h  main.cpp  main.h
openmp/: main.cpp
